HelloUltraviolet/Fixtures/RejectedSource/Parsing/MissingStatementTerminator/Source/Main.uv
//! Rejected parsing specimen for adjacent statements without a terminator.

public procedure missingStatementTerminatorReference() -> i32 {
    let value: i32 = 1 let next: i32 = 2
    return value + next
}
